# gtn-cinematic-director

./: README.md  pyproject.toml
cinema_widget_nodes/: CinematicDirectorWidgetV48.js  CinematicDirectorWidgetV49.js  __init__.py  cinematic_director_node.py  griptape_nodes_library.json
