[project]
name = "griptape-nodes-library-cinemawidget"
version = "0.1.0"
description = "Cinema Setup Widget for Griptape Nodes — sleek scroll-wheel camera/lens/lighting selector with built-in LLM prompt generation"
authors = [
    { name = "Griptape Community" }
]
requires-python = ">=3.11"
dependencies = [
    "griptape-nodes",
    "griptape[drivers-prompt-griptape-cloud]",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev = "latest" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
